--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,17 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.light {
+    height: 75px;
+    width: 75px;
+    background-color: gray;
+    border-radius: 50%;
+    display: inline-block;
+  }
+  .active {
+    height: 75px;
+    width: 75px;
+    background-color: purple;
+    border-radius: 50%;
+    display: inline-block;
+  }
