--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,26 +1,14 @@
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
 .light {
     height: 75px;
     width: 75px;
-    background-color: gray;
     border-radius: 50%;
     display: inline-block;
   }
   .active {
     height: 75px;
     width: 75px;
-    background-color: purple;
     border-radius: 50%;
     display: inline-block;
+    box-shadow: 0px 0px 40px 20px #0ff;
   }
