--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,14 +1,29 @@
 
+.lightBox {
+  background-color: black;
+  display: grid;
+  margin: auto;
+  margin-top: 100px;
+  height: 300px;
+  width: 100px;
+}
+.container {
+  justify-content: center;
+  display: inline-grid;
+
+}
 .light {
     height: 75px;
     width: 75px;
     border-radius: 50%;
-    display: inline-block;
+    display: inline-grid;
+    margin-top: 10px;
   }
   .active {
     height: 75px;
     width: 75px;
     border-radius: 50%;
-    display: inline-block;
+    display: inline-grid;
     box-shadow: 0px 0px 40px 20px #0ff;
+    margin-top: 10px;
   }
