--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,29 +1,30 @@
-
 .lightBox {
   background-color: black;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   display: grid;
   margin: auto;
   margin-top: 100px;
   height: 300px;
-  width: 100px;
+  width: 130px;
 }
 .container {
   justify-content: center;
   display: inline-grid;
-
+  padding-block: 10px;
 }
 .light {
-    height: 75px;
-    width: 75px;
-    border-radius: 50%;
-    display: inline-grid;
-    margin-top: 10px;
-  }
-  .active {
-    height: 75px;
-    width: 75px;
-    border-radius: 50%;
-    display: inline-grid;
-    box-shadow: 0px 0px 40px 20px #0ff;
-    margin-top: 10px;
-  }
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
+  margin-top: 10px;
+}
+.active {
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 40px 20px #0ff;
+  margin-top: 10px;
+}
